--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,18 +2,48 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>Making Reading Even Harder!</title>
+    <style>
+        body {
+            background: url("background.jpg");
+            background-size: cover;
+            width: 99%;
+        }
+
+        h1 {
+            color: LightCyan;
+            font-weight: bolder;
+            font-size: 4em;
+        }
+
+        input#submit {
+            font-size: 1.3em;
+        }
+
+        .form-group.col-md-6.col-sm-10 {
+            margin-bottom: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <textarea rows=7 cols="40" id="source" placeholder="Type text here..."></textarea> <br/>
-    <input type="button" id ="submit" value="Submit" /> <br/>
-    <div style="visibility: hidden;">
-      <label for="target">Your result! </label><br/><textarea disabled="disabled" rows=9 cols="40" id="target"></textarea>
+    <div class="row">
+        <div class="form-group col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+            <h1 class="text-center">Thesaurawr</h1><br/>
+            <textarea rows=7 cols="40" id="source" placeholder="Type text here..." class="form-control"></textarea> <br/>
+            <input type="button" id ="submit" value="Submit" class="form-control" /> <br/>
+            <span style="visibility: hidden;">
+                <textarea disabled="disabled" rows=9 cols="40" id="target" class="form-control"></textarea>
+            </span>
+        </div>
     </div>
 
 </body>
 
 <script src="jquery-3.1.1.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <script>
     $(document).ready(function() {
 
@@ -25,7 +55,7 @@
             })
             .done(function(response) {
                 $("textarea#target").val(response);
-                $("div").css("visibility", "visible")
+                $("span").css("visibility", "visible")
 
             })
             .fail(function(xhr, error){
