--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -32,6 +32,53 @@
         <div class="form-group col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
             <h1 class="text-center">Thesaurawr</h1><br/>
             <textarea rows=7 cols="40" id="source" placeholder="Type text here..." class="form-control"></textarea> <br/>
+            Word Length:
+            <select id="length" class="form-group">
+                <option value="long">long</option>
+                <option value="short">short</option>
+            </select>
+            Nouns:
+            <select id="noun" class="form-group">
+                <option value="Synonym">Synonym</option>
+                <option value="Hypernym">Hypernym</option>
+                <option value="Hyponym">Hyponym</option>
+                <option value="Antonym">Antonym</option>
+                <option value="Similar to">Similar to</option>
+            </select>
+            Verbs:
+            <select id="verb" class="form-group">
+                <option value="Synonym">Synonym</option>
+                <option value="Hypernym">Hypernym</option>
+                <option value="Hyponym">Hyponym</option>
+                <option value="Antonym">Antonym</option>
+                <option value="Entailment">Entailment</option>
+                <option value="Similar to">Similar to</option>
+            </select>
+            Adjectives:
+            <select id="adjective" class="form-group">
+                <option value="Synonym">Synonym</option>
+                <option value="Hypernym">Hypernym</option>
+                <option value="Antonym">Antonym</option>
+                <option value="Hyponym">Hyponym</option>
+                <option value="Similar to">Similar to</option>
+            </select>
+            Adverbs:
+            <select id="adverb" class="form-group">
+                <option value="Synonym">Synonym</option>
+                <option value="Hypernym">Hypernym</option>
+                <option value="Antonym">Antonym</option>
+                <option value="Hyponym">Hyponym</option>
+                <option value="Similar to">Similar to</option>
+            </select>
+            Depth:
+            <select id="depth" class="form-group">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+
+            </select>
             <input type="button" id ="submit" value="Submit" class="form-control" /> <br/>
             <span style="visibility: hidden;">
                 <textarea disabled="disabled" rows=9 cols="40" id="target" class="form-control"></textarea>
@@ -51,7 +98,14 @@
             $.ajax({
                 method: "GET",
                 url: "/convert",
-                data: { text: $("textarea#source").val() },
+                data: { text: $("textarea#source").val(),
+                    length: $("select#length").val(),
+                    noun: $("select#noun").val(),
+                    verb: $("select#verb").val(),
+                    adjective: $("select#adjective").val(),
+                    adverb: $("select#adverb").val(),
+                    depth: $("select#depth").val(),
+                },
             })
             .done(function(response) {
                 $("textarea#target").val(response);
